--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# ignored
+DB/
+DB/*
+HIST_PAINEL_COVIDBR*
+HIST_PAINEL_COVIDBR*/*
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
